# KapiBaraDebugApp

./: CMakeLists.txt  MiniBara.qml  README.md  controller.cpp  controller.h  grpc.cpp  grpc.h  main.cpp  main.qml  qml.qrc
_grpc/: gen_proto.sh  rc_service.grpc.pb.cc  rc_service.grpc.pb.h  rc_service.pb.cc  rc_service.pb.h  rc_service.proto
meshes/: miniBara_mesh.mesh
